FreeIPMI 1.5.1 - 03/01/14
-------------------------
Tools - New Features
--------------------
o Update Intel Node Manager support for 3.0 specification.
  - Update API and fiid templates in libfreeipmi
  - Support new OEM SEL events
  - Update ipmi-oem commands.
    - Support new get/set-turbo-synchronization-ratio
    - Support new 'policypowerdomain' option in get-node-manager-capabilities.
    - Update output of get-node-manager-policy and
      get-node-manager-capabilities for changes.
    - get/set-node-manager-alert-thresholds converted to
      get/set-node-manager-policy-alert-thresholds.  Legacy commands
      still supported.
o Support ipmi-sel OEM interpretation of Linux kernel panics.

Tools - Bug Fixes/Minor Changes
-------------------------------


Libraries
---------
o Update for IPMI 2.0 Errata 7.
  - Support/handle FRU Multirecord NVM Express type.
o Support Get Device SDR Info, Get Device SDR, and Reserve Device SDR
  Repository commands in libfreeipmi.

FreeIPMI 1.4.1 - 03/01/14
-------------------------

Tools - New Features
--------------------
o Support new tool ipmi-config.  Ipmi-config is a consolidated
  configuration tool implementing everything that was previously in
  bmc-config, ipmi-pef-config, ipmi-sensors-config, and
  ipmi-chassis-config.
  - The consolidated tool will allow users to checkout, commit, and
    diff sections/fields across the four former tools using only one
    tool.
  - The consolidated tool will also allow users to checkout, commit,
    and diff new sections/fields not yet covered in the four former
    tools.
  - Legacy scripts for bmc-config, ipmi-pef-config,
    ipmi-sensors-config, and ipmi-chassis-config will point to the new
    tool with all appropriate options to ensure full backwards
    compatability.
  - The ipmi-pef-config --info option has been made legacy.  It is
    still supported but no longer advertised.
o Support Intel Data Center Host Interface / Management Engine as