@@ -140,6 +140,7 @@ ipmi_cmd_oem_intel_node_manager_set_node_manager_policy (ipmi_ctx_t ctx,
 							 uint8_t policy_storage_option,
                                                          uint8_t policy_exception_actions_send_alert,
                                                          uint8_t policy_exception_actions_shutdown_system,
+							 uint8_t policy_power_domain,
                                                          uint16_t policy_target_limit,
                                                          uint32_t correction_time_limit,
                                                          uint16_t policy_trigger_limit,
@@ -184,6 +185,7 @@ ipmi_cmd_oem_intel_node_manager_set_node_manager_policy (ipmi_ctx_t ctx,
 							       policy_storage_option,
                                                                policy_exception_actions_send_alert,
                                                                policy_exception_actions_shutdown_system,
+							       policy_power_domain,
                                                                policy_target_limit,
                                                                correction_time_limit,
                                                                policy_trigger_limit,
@@ -243,6 +245,7 @@ ipmi_cmd_oem_intel_node_manager_set_node_manager_policy_boot_time_policy (ipmi_c
 									  uint8_t policy_storage_option,
 									  uint8_t policy_exception_actions_send_alert,
 									  uint8_t policy_exception_actions_shutdown_system,
+									  uint8_t policy_power_domain,
 									  uint8_t platform_booting_mode,
 									  uint8_t cores_disabled,
 									  uint32_t correction_time_limit,
@@ -288,6 +291,7 @@ ipmi_cmd_oem_intel_node_manager_set_node_manager_policy_boot_time_policy (ipmi_c
 										policy_storage_option,
 										policy_exception_actions_send_alert,
 										policy_exception_actions_shutdown_system,
+										policy_power_domain,
 										platform_booting_mode,
 										cores_disabled,
 										correction_time_limit,
