@@ -72,6 +72,7 @@ int ipmi_cmd_oem_intel_node_manager_set_node_manager_policy (ipmi_ctx_t ctx,
 							     uint8_t policy_storage_option,
                                                              uint8_t policy_exception_actions_send_alert,
                                                              uint8_t policy_exception_actions_shutdown_system,
+							     uint8_t policy_power_domain,
                                                              uint16_t policy_target_limit,
                                                              uint32_t correction_time_limit,
                                                              uint16_t policy_trigger_limit,
@@ -91,6 +92,7 @@ int ipmi_cmd_oem_intel_node_manager_set_node_manager_policy_boot_time_policy (ip
 									      uint8_t policy_storage_option,
 									      uint8_t policy_exception_actions_send_alert,
 									      uint8_t policy_exception_actions_shutdown_system,
+									      uint8_t policy_power_domain,
 									      uint8_t platform_booting_mode,
 									      uint8_t cores_disabled,
 									      uint32_t correction_time_limit,
