@@ -379,6 +379,7 @@ int fill_cmd_oem_intel_node_manager_set_node_manager_policy (uint8_t domain_id,
 							     uint8_t policy_storage_option,
                                                              uint8_t policy_exception_actions_send_alert,
                                                              uint8_t policy_exception_actions_shutdown_system,
+							     uint8_t policy_power_domain,
                                                              uint16_t policy_target_limit,
                                                              uint32_t correction_time_limit,
                                                              uint16_t policy_trigger_limit,
@@ -394,6 +395,7 @@ int fill_cmd_oem_intel_node_manager_set_node_manager_policy_boot_time_policy (ui
 									      uint8_t policy_storage_option,
 									      uint8_t policy_exception_actions_send_alert,
 									      uint8_t policy_exception_actions_shutdown_system,
+									      uint8_t policy_power_domain,
 									      uint8_t platform_booting_mode,
 									      uint8_t cores_disabled,
 									      uint32_t correction_time_limit,
